quoting-CypressTK1/force-app/main/default/objects/Adjustment__c/fields/ColaPassThrough__c.field-meta.xml
<CustomField>
    <fullName>ColaPassThrough__c</fullName>
    <label>COLA Pass Through %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>