quoting-CypressTK1/force-app/main/default/objects/Adjustment__c/fields/ColaYoyCostAdjustment__c.field-meta.xml
<CustomField>
    <fullName>ColaYoyCostAdjustment__c</fullName>
    <label>COLA YOY Cost Adjustment %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>