quoting-CypressTK1/force-app/main/default/objects/Adjustment__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Cola</fullName>
            </value>
            <value>
                <fullName>Volume Discount</fullName>
            </value>
            <value>
                <fullName>Location Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>